{
  "version": 4,
  "terraform_version": "0.13.5",
  "serial": 207,
  "lineage": "07966cfb-74ab-5fbb-919b-ddf33d531be4",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "all_worker_mgmt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:561656980159:security-group/sg-01d3d2e0f12505674",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-01d3d2e0f12505674",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/8",
                  "172.16.0.0/12",
                  "192.168.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "all_worker_management2020110623073962110000000a",
            "name_prefix": "all_worker_management",
            "owner_id": "561656980159",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0e9e297877fa1974f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "worker_group_mgmt_one",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:561656980159:security-group/sg-078945e30ce11a6be",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-078945e30ce11a6be",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/8"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "worker_group_mgmt_one2020110623073962320000000b",
            "name_prefix": "worker_group_mgmt_one",
            "owner_id": "561656980159",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0e9e297877fa1974f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "worker_group_mgmt_two",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:561656980159:security-group/sg-09a2c7f77bff318ee",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-09a2c7f77bff318ee",
            "ingress": [
              {
                "cidr_blocks": [
                  "192.168.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "worker_group_mgmt_two20201106230738263300000007",
            "name_prefix": "worker_group_mgmt_two",
            "owner_id": "561656980159",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0e9e297877fa1974f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "beacon",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "beacon",
            "metadata": [
              {
                "generation": 0,
                "name": "beacon",
                "resource_version": "814",
                "self_link": "/api/v1/namespaces/beacon",
                "uid": "758fd320-3ab0-45a9-866c-1d738b33bba2"
              }
            ]
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "data.aws_eks_cluster.cluster",
            "data.aws_eks_cluster_auth.cluster",
            "module.eks.aws_cloudwatch_log_group.this",
            "module.eks.aws_eks_cluster.this",
            "module.eks.aws_iam_role.cluster",
            "module.eks.aws_iam_role_policy_attachment.cluster_AmazonEKSClusterPolicy",
            "module.eks.aws_iam_role_policy_attachment.cluster_AmazonEKSServicePolicy",
            "module.eks.aws_iam_role_policy_attachment.cluster_AmazonEKSVPCResourceControllerPolicy",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.workers",
            "module.eks.aws_security_group_rule.cluster_egress_internet",
            "module.eks.aws_security_group_rule.cluster_https_worker_ingress",
            "module.eks.aws_security_group_rule.cluster_private_access",
            "module.eks.data.aws_iam_policy_document.cluster_assume_role_policy",
            "module.eks.data.aws_iam_role.custom_cluster_iam_role",
            "module.eks.data.aws_partition.current",
            "module.eks.null_resource.wait_for_cluster",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "beacon",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "beacon/beacon",
            "load_balancer_ingress": [
              {
                "hostname": "a8323c6a3863246c892b2f27b9deedfe-978824813.us-east-2.elb.amazonaws.com"
              }
            ],
            "metadata": [
              {
                "generation": 0,
                "name": "beacon",
                "namespace": "beacon",
                "resource_version": "1373",
                "self_link": "/api/v1/namespaces/beacon/services/beacon",
                "uid": "8323c6a3-8632-46c8-92b2-f27b9deedfe0"
              }
            ],
            "spec": [
              {
                "cluster_ip": "172.20.110.200",
                "external_traffic_policy": "Cluster",
                "health_check_node_port": 0,
                "port": [
                  {
                    "node_port": 30465,
                    "port": 8080,
                    "protocol": "TCP",
                    "target_port": "80"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app": "beacon"
                },
                "session_affinity": "None",
                "type": "LoadBalancer"
              }
            ]
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "data.aws_eks_cluster.cluster",
            "data.aws_eks_cluster_auth.cluster",
            "kubernetes_deployment.beacon",
            "kubernetes_namespace.beacon",
            "module.eks.aws_cloudwatch_log_group.this",
            "module.eks.aws_eks_cluster.this",
            "module.eks.aws_iam_role.cluster",
            "module.eks.aws_iam_role_policy_attachment.cluster_AmazonEKSClusterPolicy",
            "module.eks.aws_iam_role_policy_attachment.cluster_AmazonEKSServicePolicy",
            "module.eks.aws_iam_role_policy_attachment.cluster_AmazonEKSVPCResourceControllerPolicy",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.workers",
            "module.eks.aws_security_group_rule.cluster_egress_internet",
            "module.eks.aws_security_group_rule.cluster_https_worker_ingress",
            "module.eks.aws_security_group_rule.cluster_private_access",
            "module.eks.data.aws_iam_policy_document.cluster_assume_role_policy",
            "module.eks.data.aws_iam_role.custom_cluster_iam_role",
            "module.eks.data.aws_partition.current",
            "module.eks.null_resource.wait_for_cluster",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:561656980159:security-group/sg-0c8d4ef1f2f8349eb",
            "description": "EKS cluster security group.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow cluster egress access to the Internet.",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c8d4ef1f2f8349eb",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow pods to communicate with the EKS cluster API.",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-04009611820cec0d1"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "training-eks-ScU2RUNH20201106230739295400000009",
            "name_prefix": "training-eks-ScU2RUNH",
            "owner_id": "561656980159",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "training",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-eks",
              "Name": "training-eks-ScU2RUNH-eks_cluster_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e9e297877fa1974f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "workers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:561656980159:security-group/sg-04009611820cec0d1",
            "description": "Security group for all nodes in the cluster.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow nodes all egress to the Internet.",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04009611820cec0d1",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-08a92e9c90eeaf5ff"
                ],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "Allow node to communicate with each other.",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "Allow pods running extension API servers on port 443 to receive communication from cluster control plane.",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c8d4ef1f2f8349eb"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Allow workers pods to receive communication from the cluster control plane.",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c8d4ef1f2f8349eb"
                ],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "training-eks-ScU2RUNH20201106230739294000000008",
            "name_prefix": "training-eks-ScU2RUNH",
            "owner_id": "561656980159",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "training",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-eks",
              "Name": "training-eks-ScU2RUNH-eks_worker_sg",
              "kubernetes.io/cluster/training-eks-ScU2RUNH": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e9e297877fa1974f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_egress_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow cluster egress access to the Internet.",
            "from_port": 0,
            "id": "sgrule-307263672",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0c8d4ef1f2f8349eb",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_https_worker_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow pods to communicate with the EKS cluster API.",
            "from_port": 443,
            "id": "sgrule-384861339",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0c8d4ef1f2f8349eb",
            "self": false,
            "source_security_group_id": "sg-04009611820cec0d1",
            "to_port": 443,
            "type": "ingress"
          },
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.workers",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_egress_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow nodes all egress to the Internet.",
            "from_port": 0,
            "id": "sgrule-1194806812",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-04009611820cec0d1",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "module.eks.aws_security_group.workers",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow workers pods to receive communication from the cluster control plane.",
            "from_port": 1025,
            "id": "sgrule-2759706311",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-04009611820cec0d1",
            "self": false,
            "source_security_group_id": "sg-0c8d4ef1f2f8349eb",
            "to_port": 65535,
            "type": "ingress"
          },
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.workers",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow pods running extension API servers on port 443 to receive communication from cluster control plane.",
            "from_port": 443,
            "id": "sgrule-4232309248",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-04009611820cec0d1",
            "self": false,
            "source_security_group_id": "sg-0c8d4ef1f2f8349eb",
            "to_port": 443,
            "type": "ingress"
          },
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.workers",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow node to communicate with each other.",
            "from_port": 0,
            "id": "sgrule-529810718",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-04009611820cec0d1",
            "self": false,
            "source_security_group_id": "sg-04009611820cec0d1",
            "to_port": 0,
            "type": "ingress"
          },
          "dependencies": [
            "module.eks.aws_security_group.workers",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0a7320c008f29de2f",
            "domain": "vpc",
            "id": "eipalloc-063bafe53380719d1",
            "network_border_group": "us-east-2",
            "network_interface": "eni-0883dc002f2a706c6",
            "private_dns": "ip-10-0-4-127.us-east-2.compute.internal",
            "private_ip": "10.0.4.127",
            "public_dns": "ec2-3-20-87-139.us-east-2.compute.amazonaws.com",
            "public_ip": "3.20.87.139",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "training-vpc-us-east-2a",
              "kubernetes.io/cluster/training-eks-ScU2RUNH": "shared"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:561656980159:internet-gateway/igw-0979b08903f03592f",
            "id": "igw-0979b08903f03592f",
            "owner_id": "561656980159",
            "tags": {
              "Name": "training-vpc",
              "kubernetes.io/cluster/training-eks-ScU2RUNH": "shared"
            },
            "vpc_id": "vpc-0e9e297877fa1974f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-063bafe53380719d1",
            "id": "nat-0907ff675809d8b1d",
            "network_interface_id": "eni-0883dc002f2a706c6",
            "private_ip": "10.0.4.127",
            "public_ip": "3.20.87.139",
            "subnet_id": "subnet-03423915b3f1da434",
            "tags": {
              "Name": "training-vpc-us-east-2a",
              "kubernetes.io/cluster/training-eks-ScU2RUNH": "shared"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-01a8879738a9f16541080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0907ff675809d8b1d",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-01a8879738a9f1654",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0979b08903f03592f",
            "id": "r-rtb-0bf4785d18d1bc6c71080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0bf4785d18d1bc6c7",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-01a8879738a9f1654",
            "owner_id": "561656980159",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0907ff675809d8b1d",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "training-vpc-private",
              "kubernetes.io/cluster/training-eks-ScU2RUNH": "shared"
            },
            "vpc_id": "vpc-0e9e297877fa1974f"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0bf4785d18d1bc6c7",
            "owner_id": "561656980159",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0979b08903f03592f",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "training-vpc-public",
              "kubernetes.io/cluster/training-eks-ScU2RUNH": "shared"
            },
            "vpc_id": "vpc-0e9e297877fa1974f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c5ecf909eef0841b",
            "route_table_id": "rtb-01a8879738a9f1654",
            "subnet_id": "subnet-07b195b47c92f082b"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02547858ad0f45690",
            "route_table_id": "rtb-01a8879738a9f1654",
            "subnet_id": "subnet-090143703f817329b"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0eafdb00250e04013",
            "route_table_id": "rtb-01a8879738a9f1654",
            "subnet_id": "subnet-0f9da2928c1aa146a"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fa4d03f140185227",
            "route_table_id": "rtb-0bf4785d18d1bc6c7",
            "subnet_id": "subnet-03423915b3f1da434"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-063bb4f92d8effd0e",
            "route_table_id": "rtb-0bf4785d18d1bc6c7",
            "subnet_id": "subnet-077bc8e73db4fb657"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01b623923265724e8",
            "route_table_id": "rtb-0bf4785d18d1bc6c7",
            "subnet_id": "subnet-0ad917b31138b802d"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:561656980159:subnet/subnet-07b195b47c92f082b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-07b195b47c92f082b",
            "map_public_ip_on_launch": false,
            "owner_id": "561656980159",
            "tags": {
              "Name": "training-vpc-private-us-east-2a",
              "kubernetes.io/cluster/training-eks-ScU2RUNH": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0e9e297877fa1974f"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:561656980159:subnet/subnet-090143703f817329b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-090143703f817329b",
            "map_public_ip_on_launch": false,
            "owner_id": "561656980159",
            "tags": {
              "Name": "training-vpc-private-us-east-2b",
              "kubernetes.io/cluster/training-eks-ScU2RUNH": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0e9e297877fa1974f"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:561656980159:subnet/subnet-0f9da2928c1aa146a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-0f9da2928c1aa146a",
            "map_public_ip_on_launch": false,
            "owner_id": "561656980159",
            "tags": {
              "Name": "training-vpc-private-us-east-2c",
              "kubernetes.io/cluster/training-eks-ScU2RUNH": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0e9e297877fa1974f"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:561656980159:subnet/subnet-03423915b3f1da434",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-03423915b3f1da434",
            "map_public_ip_on_launch": true,
            "owner_id": "561656980159",
            "tags": {
              "Name": "training-vpc-public-us-east-2a",
              "kubernetes.io/cluster/training-eks-ScU2RUNH": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0e9e297877fa1974f"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:561656980159:subnet/subnet-077bc8e73db4fb657",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.5.0/24",
            "id": "subnet-077bc8e73db4fb657",
            "map_public_ip_on_launch": true,
            "owner_id": "561656980159",
            "tags": {
              "Name": "training-vpc-public-us-east-2b",
              "kubernetes.io/cluster/training-eks-ScU2RUNH": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0e9e297877fa1974f"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:561656980159:subnet/subnet-0ad917b31138b802d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.6.0/24",
            "id": "subnet-0ad917b31138b802d",
            "map_public_ip_on_launch": true,
            "owner_id": "561656980159",
            "tags": {
              "Name": "training-vpc-public-us-east-2c",
              "kubernetes.io/cluster/training-eks-ScU2RUNH": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0e9e297877fa1974f"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:561656980159:vpc/vpc-0e9e297877fa1974f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06d4b42999960938e",
            "default_route_table_id": "rtb-0b66ac384cece2a7b",
            "default_security_group_id": "sg-036d9ce1a534ca476",
            "dhcp_options_id": "dopt-0453ea6f",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0e9e297877fa1974f",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0b66ac384cece2a7b",
            "owner_id": "561656980159",
            "tags": {
              "Name": "training-vpc",
              "kubernetes.io/cluster/training-eks-ScU2RUNH": "shared"
            }
          },
          "dependencies": [
            "random_string.suffix"
          ]
        }
      ]
    }
  ]
}